PokeTradR/force-app/main/default/objects/Offer__c/fields/Money_Offered__c.field-meta.xml
<CustomField>
    <fullName>Money_Offered__c</fullName>
    <description>How much money is offered by a trainer</description>
    <label>Money Offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>