PokeTradR/force-app/main/default/objects/Offer__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>