PokeTradR/force-app/main/default/objects/Offer__c/fields/Pokedex_Number__c.field-meta.xml
<CustomField>
    <fullName>Pokedex_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pokedex Number</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Existing Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>