PokeTradR/force-app/main/default/objects/Offer__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <label>Trainer Name</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>