PokeTradR/force-app/main/default/objects/Offer__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <description>Primary Type of Pokémon</description>
    <label>Type1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type1</valueSetName>
    </valueSet>
</CustomField>