PokeTradR/force-app/main/default/objects/Offer__c/validationRules/No_More_Offers_Once_Trade_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>No_More_Offers_Once_Trade_Closed</fullName>
    <active>true</active>
    <description>Prevent more offers to be made when a trade is closed</description>
    <errorConditionFormula>IF(ISPICKVAL(Trade__r.Status__c, &quot;Closed&quot;), ISNEW(), false)</errorConditionFormula>
    <errorMessage>Cannot make any more offers to this Trade</errorMessage>
</ValidationRule>